# cmake-pandocology-sample

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/syntax/: CMakeLists.txt
src/syntax/doc/: main.md
src/syntax/templates/: simpletemplate.tex
template/: CMakeLists.txt
templates/src/: CMakeLists.txt
templates/src/doc/: main.md
templates/src/img/: DELETE.txt
